Implemented stub char select

--- a/CsPyMudServer/CsPyMudServer/CsPyMudServer.csproj
+++ b/CsPyMudServer/CsPyMudServer/CsPyMudServer.csproj
@@ -41,6 +41,8 @@
     <Compile Include="Conversation.cs" />
     <Compile Include="AuthenticationConversation.cs" />
     <Compile Include="PlayingConversation.cs" />
+    <Compile Include="CharacterSelectConversation.cs" />
+    <Compile Include="PlayerStatus.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="mudserver.pfx">
