--- a/CsPyMudServer/CsPyMudServer/CsPyMudServer.csproj
+++ b/CsPyMudServer/CsPyMudServer/CsPyMudServer.csproj
@@ -37,7 +37,7 @@
     <Compile Include="ConnectionListener.cs" />
     <Compile Include="WorldManager.cs" />
     <Compile Include="ConnectionManager.cs" />
-    <Compile Include="Connection.cs" />
+    <Compile Include="MessageStream.cs" />
     <Compile Include="Conversation.cs" />
     <Compile Include="AuthenticationConversation.cs" />
     <Compile Include="PlayingConversation.cs" />
