Refactored conversations to use 'CompleteHandler'
Much cleaner implementation than having the ConnectionManager polling
every conversation every Tick()

--- a/CsPyMudServer/CsPyMudServer/CsPyMudServer.csproj
+++ b/CsPyMudServer/CsPyMudServer/CsPyMudServer.csproj
@@ -43,6 +43,7 @@
     <Compile Include="PlayingConversation.cs" />
     <Compile Include="CharacterSelectConversation.cs" />
     <Compile Include="PlayerStatus.cs" />
+    <Compile Include="Connection.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="mudserver.pfx">
