--- a/CsPyMudServer/CsPyMudServer/CsPyMudServer.csproj
+++ b/CsPyMudServer/CsPyMudServer/CsPyMudServer.csproj
@@ -42,8 +42,12 @@
     <Compile Include="AuthenticationConversation.cs" />
     <Compile Include="PlayingConversation.cs" />
     <Compile Include="CharacterSelectConversation.cs" />
-    <Compile Include="PlayerStatus.cs" />
     <Compile Include="Connection.cs" />
+    <Compile Include="Character.cs" />
+    <Compile Include="Enemy.cs" />
+    <Compile Include="Item.cs" />
+    <Compile Include="Player.cs" />
+    <Compile Include="Weapon.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="mudserver.pfx">
