Implemented rooms and moving between them
Room data in Rooms.json

--- a/CsPyMudServer/CsPyMudServer/CsPyMudServer.csproj
+++ b/CsPyMudServer/CsPyMudServer/CsPyMudServer.csproj
@@ -30,6 +30,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Json" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Server.cs" />
@@ -48,10 +49,14 @@
     <Compile Include="Item.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Weapon.cs" />
+    <Compile Include="Room.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="mudserver.pfx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Rooms.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
